# object-centric-multiple-object-tracking

./: README.md  pyproject.toml  requirements.txt
configs/dataset/: cater.yaml
configs/experiment/: _output_path.yaml
configs/experiment/OC-MOT/: cater.yaml  cater_eval.yaml
configs/experiment/SAVi/: _cater_bbox_mot_preprocessing.yaml  cater.yaml
ocl/: base.py  combined_model.py  conditioning.py  consistency.py  datasets.py  decoding.py  distillation.py  feature_extractors.py  hooks.py  losses.py  memory.py  memory_rollout.py  metrics.py  mha.py  neural_networks.py  path_defaults.py  perceptual_grouping.py  plugins.py  predictor.py  preprocessing.py  scheduling.py  tree_utils.py  utils.py  visualization_types.py  visualizations.py
ocl/cli/: compute_dataset_size.py  eval.py  eval_cluster_metrics.py  eval_utils.py  train.py
ocl/config/: __init__.py  conditioning.py  datasets.py  feature_extractors.py  memory.py  metrics.py  neural_networks.py  optimizers.py  perceptual_groupings.py  plugins.py  predictor.py  utils.py
ocl/models/: __init__.py  savi.py  savi_with_memory.py
